--- a/main.html
+++ b/main.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>AccioJob Blog</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- Marquee Header -->
+    <marquee>
+        <h1>Welcome to Accio Jobs!</h1>
+    </marquee>
+    
+    <!-- Blog Link -->
+    <h1><a href="https://acciojob.com/blog">AccioJob's Blog</a></h1>
 
+    <!-- Articles -->
+    <article>
+        <h2>Brute Force vs. Optimization</h2>
+        <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px" alt="Brute Force vs. Optimization">
+        <p>We can say that optimization is the process of making a solution as effective as possible. It involves refining and improving the algorithm to achieve better performance and efficiency. In contrast, brute force is a straightforward method of solving a problem, typically by trying all possible solutions until the correct one is found.</p>
+        <a href="https://acciojob.com/blog/brute-force-vs-optimization">Brute Force vs. Optimization</a>
+    </article>
+
+    <article>
+        <h2>DSA vs. Competitive Programming</h2>
+        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px" alt="DSA vs. Competitive Programming">
+        <p>DSA or Competitive programming? This is a common question among coding enthusiasts. Data Structures and Algorithms (DSA) form the foundation of efficient coding practices, while competitive programming helps in honing problem-solving skills under time constraints.</p>
+        <a href="https://acciojob.com/blog/dsa-vs-competitive-programming">DSA vs. Competitive Programming</a>
+    </article>
+
+    <article>
+        <h2>Complete Guide on FlexBox</h2>
+        <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px" alt="Complete Guide on FlexBox">
+        <p>As a job seeker, you may wonder about the best ways to structure your web applications. FlexBox is a powerful CSS layout module that allows you to design complex layouts with ease and flexibility.</p>
+        <a href="https://acciojob.com/blog/complete-guide-on-flexbox">Complete Guide on FlexBox</a>
+    </article>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
