--- a/main.html
+++ b/main.html
@@ -7,36 +7,38 @@
     <title>AccioJob Blog</title>
 </head>
 <body>
-    <!-- Marquee Header -->
-    <marquee>
-        <h1>Welcome to Accio Jobs!</h1>
-    </marquee>
-    
-    <!-- Blog Link -->
-    <h1><a href="https://acciojob.com/blog">AccioJob's Blog</a></h1>
+    <marquee><h1>Welcome to Accio Jobs!</h1></marquee>
 
-    <!-- Articles -->
-    <article>
+    <a href="https://acciojob.com/blog">
+        <h1 style="text-align: center;">Accio Job's Blog</h1>
+    </a>
+
+    <div class="article">
         <h2>Brute Force vs. Optimization</h2>
-        <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px" alt="Brute Force vs. Optimization">
-        <p>We can say that optimization is the process of making a solution as effective as possible. It involves refining and improving the algorithm to achieve better performance and efficiency. In contrast, brute force is a straightforward method of solving a problem, typically by trying all possible solutions until the correct one is found.</p>
-        <a href="https://acciojob.com/blog/brute-force-vs-optimization">Brute Force vs. Optimization</a>
-    </article>
+        <img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000"
+             alt="Brute Force vs. Optimization"
+             height="200">
+        <p>We can say that optimization is...</p>
+        <a href="#">Read More</a>
+    </div>
 
-    <article>
+    <div class="article">
         <h2>DSA vs. Competitive Programming</h2>
-        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px" alt="DSA vs. Competitive Programming">
-        <p>DSA or Competitive programming? This is a common question among coding enthusiasts. Data Structures and Algorithms (DSA) form the foundation of efficient coding practices, while competitive programming helps in honing problem-solving skills under time constraints.</p>
-        <a href="https://acciojob.com/blog/dsa-vs-competitive-programming">DSA vs. Competitive Programming</a>
-    </article>
+        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000"
+             alt="DSA vs. Competitive Programming"
+             height="200">
+        <p>DSA or Competitive programming?...</p>
+        <a href="#">Read More</a>
+    </div>
 
-    <article>
+    <div class="article">
         <h2>Complete Guide on FlexBox</h2>
-        <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px" alt="Complete Guide on FlexBox">
-        <p>As a job seeker, you may wonder about the best ways to structure your web applications. FlexBox is a powerful CSS layout module that allows you to design complex layouts with ease and flexibility.</p>
-        <a href="https://acciojob.com/blog/complete-guide-on-flexbox">Complete Guide on FlexBox</a>
-    </article>
-
+        <img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png"
+             alt="Complete Guide on FlexBox"
+             height="200">
+        <p>As a job seeker, you may wonder...</p>
+        <a href="#">Read More</a>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
